@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-10-14  Michael Jahn
+	* E-Pipoca plugin updated
+
 2010-10-09  Michael Jahn
 	* OFDb and IMDb plugin updated
 
